[package]
name = "arfw"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
apfs = "^0.2.4"
winfsp = "^0.12.4"
windows = { version = "^0.62", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Ioctl", "Win32_Security", "Win32_System_Registry", "Win32_System_LibraryLoader", "Win32_Devices_DeviceAndDriverInstallation"] }
windows-service = "^0.8"
crossbeam-channel = "^0.5"
clap = { version = "^4.5", features = ["derive"] }
anyhow = "^1.0"
thiserror = "^2"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
ctrlc = "^3.4"
lru = { version = "0.16.4", features = ["hashbrown"] }

[build-dependencies]
winfsp = "^0.12.4"

[dev-dependencies]
tempfile = "^3.10"

[[bin]]
name = "arfw"
path = "src/main.rs"

[patch.crates-io]
apfs = { path = "vendor/apfs" }
